2010-07-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode): avoid repeating
	authorization when `twittering-initial-timeline-spec-string' is a
	list of multiple timeline spec strings.

	* twittering-mode.el (twittering-http-default-sentinel): display
	an error message when waiting for a response of an authorization
	query.

	* twittering-mode.el: Replace functions `mapcan' and `map' defined
	in `cl-extra' with built-in functions in order to prevent the
	byte-compiled `twittering-mode' from depending on `cl-extra'.
	(twittering-oauth-get-token-alist-curl): replace `mapcan' with a
	combination of `apply', `append' and `mapcar'.
	(twittering-start-http-session-curl): likewise.

2010-07-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-redisplay-status-on-buffer): Fix
	the condition of redisplaying a timeline.

	* twittering-mode.el: If it fails to retrieve an image a certain
	times, retry no longer.
	(twittering-create-image-pair): return
	`twittering-error-icon-data-pair' if the argument `image-data' is
	nil.
	(twittering-make-icon-string): fix the condition of
	`image-data'. If it is an integer, it means the time of retries.

	* twittering-mode.el: Use icon images scaled by API if possible.
	(twittering-generate-format-table): generate the URL of the scaled
	icon image by API.

	* twittering-mode.el: Use `GET users/profile_image' API only if
	the variable `twittering-use-profile-image-api' is non-nil. Since
	the API is rate limited, it may cause troubles on other API calls.
	(twittering-use-profile-image-api): new variable.
	(twittering-generate-format-table): call `GET users/profile_imagne'
	API only if `twittering-use-profile-image-api' is non-nil.

2010-07-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Replace `xml-parse-region' with
	`twittering-xml-parse-region' in order to prevent abnormal exit
	caused by decoding unknown numeric character references.