@@ -1,3 +1,10 @@
+2010-08-06  Tadashi MATSUO  <tad@mymail.twin.jp>
+
+	* twittering-mode.el: Fix options of `curl' for POST with an empty
+	body.
+	(twittering-start-http-session-curl): add an option "-d" whenever
+	`method' equals to "POST".
+
 2010-07-25  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* twittering-mode.el (twittering-mode): avoid repeating
